--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <title>Trabalho Simples</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #282c34;
+            color: white;
+            font-family: Arial, sans-serif;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+            flex-direction: column;
+        }
+        h1 {
+            font-size: 3rem;
+            background: rgba(0, 0, 0, 0.5);
+            padding: 15px 25px;
+            border-radius: 10px;
+        }
+        img {
+            margin-top: 20px;
+            width: 200px;
+            height: auto;
+        }
+    </style>
+</head>  
 <body>
-    <h1>teste</h1>
+    <h1>Teste</h1>
+    <img src="https://c.tenor.com/ZjYwX8rwKJIAAAAM/akatsuki-duck.gif" alt="Pato Akatsuki GIF">
 </body>
 </html>
